k8s/online-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: online-ns
  labels:
    name: online-ns
    environment: production
