k8s/online-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-deployment
  labels:
    name: online-deployment
    environment: production
  namespace: online-ns
  annotations:
    deployment.kubernetes.io/revision: "1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: online-app
  template:
    metadata:
      labels:
        app: online-app
    spec:
      containers:
        - name: app-online
          image: devshubh2204/online-poc:1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
