k8s/online-service.yml
apiVersion: v1
kind: Service
metadata:
  name: online-service
  namespace: online-ns
  labels:
    name: online-service
    environment: production
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: online-app
